removed duplication in docs folder
Former-commit-id: 7a4b200c3c54ae07221db0caaf2cf64ca1550401 [formerly 384dcea648ac7b6b5d94cd7bd5338320af5b8a04]
Former-commit-id: faff77e74d3c571d53cc41059e6b2b4e88067336

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 destination: docs
+exclude: archive, graphics, webplayer, browsergame, blend4web,
+details-shim-master, blenderstuff, working,
+LICENSE.txt, README.md, TODO.txt, basetemplate.html
