setting up tab contents
Former-commit-id: b7b76b0faa2cf386b6f7f6b62d4226fe9c9a9cc6 [formerly f0443222c8eee2eb147227e21dfca02c4cb076d0]
Former-commit-id: 49a93fd17bfa9da7b4e2021b9a3286b66ab7de7b

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,14 @@
 destination: docs
-exclude: archive, graphics, webplayer, browsergame, blend4web,
-details-shim-master, blenderstuff, working,
-LICENSE.txt, README.md, TODO.txt, basetemplate.html
+exclude:
+- archive
+- graphics
+- webplayer
+- browsergame
+- blend4web
+- details-shim-master
+- blenderstuff
+- working
+- LICENSE.txt
+- README.md
+- TODO.txt
+- basetemplate.html
