hating this right now
Former-commit-id: 56334d88471589fe617932466e584973be70fbb8 [formerly 98dfaad950de9e58e2aa5cac66d3f295ebcaae15]
Former-commit-id: c9b58cd89cfd3ef5cdd124b46aa3c738718a2b32

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,31 @@
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
+      stylesheet: "css/content.nest.sass.css"
+  -
+    scope:
+      path: ""
+      type: "posts"
+    value:
+      layout: "post"
+
 destination: docs
 exclude:
-- archive
-- graphics
-- webplayer
-- browsergame
-- blend4web
-- details-shim-master
-- blenderstuff
-- working
-- LICENSE.txt
-- README.md
-- TODO.txt
-- basetemplate.html
+  - archive
+  - graphics
+  - webplayer
+  - browsergame
+  - blend4web
+  - details-shim-master
+  - blenderstuff
+  - working
+  - LICENSE.txt
+  - README.md
+  - TODO.txt
+  - basetemplate.html
+markdown: kramdown
+url: "https://www.moonwards.com/"
