set up blog tab with post index
Former-commit-id: f01df128a2f955556a30b6c84921261a142938fa

--- a/_config.yml
+++ b/_config.yml
@@ -29,5 +29,6 @@ exclude:
   - basetemplate.html
 markdown: kramdown
 url: "https://www.moonwards.com/"
+excerpt_separator: end-excerpt
 collections:
  rss:
