--- a/sass/makefile
+++ b/sass/makefile
@@ -1,4 +1,4 @@
-complete : main.nest.sass.css learn.nest.sass.css blogMain.nest.sass.css posts.nest.sass.css content.nest.sass.css
+complete : main.nest.sass.css learn.nest.sass.css blogMain.nest.sass.css posts.nest.sass.css content.nest.sass.css 404css.nets.sass.css
 
 main.nest.sass.css : main.sass _style-vars.sass _html-styles.sass _text-styles.sass _nav.sass _mainHeader.sass _blocks-objects.sass _iframes.sass _rssfeed.sass _tooltipster.sass _details.sass _tables.sass _tabs.sass
 	sass main.sass ../css/main.nest.sass.css
@@ -10,3 +10,5 @@ posts.nest.sass.css : posts.sass _style-vars.sass _post-styles.sass _tooltipster
 	sass posts.sass ../css/posts.nest.sass.css
 content.nest.sass.css : content.sass _style-vars.sass _text-styles.sass _nav.sass _contentHeader.sass _blocks-objects.sass _tooltipster.sass _details.sass _tables.sass _iframes.sass _input.sass _html-styles.sass
 	sass content.sass ../css/content.nest.sass.css
+404css.nets.sass.css : 404css.sass
+	sass 404css.sass ../css/404css.nest.sass.css
