--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ exclude:
   - TODO.txt
   - basetemplate.html
 markdown: kramdown
-url: "https://www.moonwards.com/"
+url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
 collections:
  rss:
