sass-less jekyll build
Former-commit-id: 7890d4fec5f536f8b486c5745b6e6f44856940f4

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ exclude:
   - README.md
   - TODO.txt
   - basetemplate.html
+  - sass
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
