made the learn page modular
Former-commit-id: dcb7c27f88958d2641723020c2becb675b756df0 [formerly 90e84928024e5362758cf8b8ddfb15e0b7af10ff]
Former-commit-id: 33c5db1592e4440d2e6fc5daa2706c22966c720c

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 # Temporary Files #
 *~
 *.swp
-# map files
+# stuff used by jekyll or something #
 Gemfile
 Gemfile.lock
-docs/*
+# tmp sass #
 sass/.sass-cache
+# finished site #
+docs/*
+# compiled css #
+css/*
+# just in case #
+skynet/*
