--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,9 @@ exclude:
   - README.md
   - TODO.txt
   - basetemplate.html
+  - extractor.py
+  - Gemfile
+  - Gemfile.lock
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
