converting that json file
Former-commit-id: 4f4cd9926b7846f3c369fe6b0726d81947234172 [formerly ae78e815a7d855ab85b4cf506318185b79f398c2]
Former-commit-id: c30289c9c553d3bd3c8a5ed1994a5ab686bb745c

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ exclude:
   - extractor.py
   - Gemfile
   - Gemfile.lock
+  - engines.sh
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
