no forum in a build
Former-commit-id: cc71e08c136ebbbf594eb777f7dd2913aaffb09d [formerly 311adfeff408e24d0d862fee059c2f96d13cdfae]
Former-commit-id: 3939ed34fb98a830628d24035c6669c20d06d132

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ exclude:
   - sass
   - directoryStructure
   - makefile
+  - forum
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
