--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ exclude:
   - directoryStructure
   - makefile
   - forum
+  - drafts
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
