--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,7 @@ exclude:
   - README.md
   - TODO.txt
   - basetemplate.html
-  - extractor.py
-  - engines.sh
+  - extractor.sh
   - sass
   - directoryStructure
   - makefile
