misc small changes
Former-commit-id: c0b4ca4f98841ebc4e955a82dc6fd8ec2aabf922 [formerly 99b08f90e5771acc90942665e45e620f5e7f2056]
Former-commit-id: cd66cacb1e4ad54f1ae4c9234bf3e0f862a4cc40

--- a/_config.yml
+++ b/_config.yml
@@ -33,5 +33,7 @@ exclude:
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
+gems:
+  - jekyll-timeago
 collections:
  rss:
