pseudo directory system
Former-commit-id: d697f1d27e2451c2331a59055c9d1138ec9a1aca [formerly 7f3695f3c3967f98f8dbfe53752f4d817dc5f3ce]
Former-commit-id: 5fd126057618560f50316fd32be6c5e6ccf0c2d3

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,10 @@ exclude:
   - blenderstuff
   - working
   - LICENSE.txt
+  - expandingDirectories.build
+  - build.sh
+  - cleanup.sh
+  - movedFiles.tmp
   - README.md
   - TODO.txt
   - basetemplate.html
@@ -30,6 +34,7 @@ exclude:
   - makefile
   - forum
   - drafts
+  - tools
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
