grouping of favicons
Former-commit-id: 45e5e11320abb545c1fd7c5aea10683620489779 [formerly 79c2fc1a661ff358c9ddc940fac8e86e3a75af22]
Former-commit-id: ad7870892c43c2b18c629a88e3cf182a3bb66c0e

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ exclude:
   - forum
   - drafts
   - tools
+  - favicons
 markdown: kramdown
 url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
