comments added to machines.html, update config with plugins section

--- a/_config.yml
+++ b/_config.yml
@@ -41,5 +41,7 @@ url: "https://www.moonwards.com"
 excerpt_separator: end-excerpt
 gems:
   - jekyll-timeago
+plugins:
+  - jekyll-timeago
 collections:
  rss:
